<resources>
    <string name="app_name">Healthy Diet+</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_tutorial">Tutorial</string>
    <string name="nav_calcol">Calories Control</string>
    <string name="nav_eatsched">Eating Schedule</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Tutorial</item>
        <item>Calories Control</item>
        <item>Eating Schedule</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_love">Love</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="password">Password</string>
    <string name="action_logout">Logout</string>
    <string name="action_miss">Miss</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="prompt_username">Username</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="skip">Skip</string>
    <string name="start">GOT IT</string>
    <string name="Hint">Enter Here</string>
    <string name="next">Next</string>
    <string name="halaman_yang_membantu_anda_untuk_melihat_inputan_terakhir_anda_mengenai_berat_ideal_anda">\nPage that help you to see your last input about your weight.</string>
    <string name="connect_with_mi_band">Connect With Mi Band</string>
    <string name="copyright">Copyright</string>
    <string name="logo_aplikasi">Logo aplikasi</string>
    <string name="you_have_been_registered">You have been registered</string>
    <string name="bod">Birth of Date</string>
    <string name="prompt_displayname">Display Name</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="retype_password">Retype Password (optional)</string>
    <string name="miband_describtion">logo miband</string>
    <string name="last_describtion">logo last</string>
    <string name="update_describtion">logo update</string>
    <string name="eating_describtion">logo eating</string>
    <string name="foodlist_describtion">logo foodlist</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="update">Update</string>
    <string name="kg">Kg</string>
    <string name="regulary">Regularly</string>
    <string name="cm">Cm</string>
    <string name="cal">Cal</string>
    <string name="fat">Fat</string>
    <string name="date">Date</string>
    <string name="date1">dd/mm/yyyy</string>
    <string name="workout">Workout Intensity</string>
    <string name="ideal_weight">Ideal Weight</string>
    <string name="ideal_calories">Ideal Calories</string>
    <string name="ideal_fat">Ideal Fat</string>
    <string name="calories_burned">Calories burned /day</string>
    <string name="workout1">Workout</string>
    <string name="loading">Loading...Please wait</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="kg_update">Kg</string>

    <!--update-->
    <string name="date_value">dd/mm/yy</string>
    <string name="cal_update">Cal</string>
    <string name="workout_value">Regularly</string>
    <string name="fat_update">Fat</string>
    <string name="lb_update">Lb</string>
    <string name="cm_update">Cm</string>
    <string name="inch_update">Inch</string>
    <string name="feet_update">Feet</string>
    <string name="calculate">Calculate</string>
    <string name="show_schedule">Show Schedule</string>


    <string-array name="interpolators">
        <item>Accelerate</item>
        <item>Linear</item>
        <item>AccelerateDecelerate</item>
        <item>Decelerate</item>
        <item>FastOutSlowIn</item>
    </string-array>

    <string-array name="workout_intensity">
        <item>Not Active</item>
        <item>1-3 in a week</item>
        <item>3-5 in a week</item>
        <item>6-7 in a week</item>
    </string-array>

    <!--Food Info-->
    <string name="g_food">G</string>
    <string name="qty">Qty</string>
    <string name="protein">Protein</string>
    <string name="carbo">Carbohydrate</string>
    <string name="calories">Calories</string>

    <!--Navbar Item-->
    <string name="tutorial">Tutorial</string>
    <string name="foodList">Food List</string>
    <string name="calCtrl">Calories Control</string>
    <string name="notification">Notification</string>
    <string name="setting">Settings</string>
    <string name="miband">MiBand Feature</string>
    <string name="Term_and_condition_page">Term And Condition</string>
    <string name="reminder">Reminder</string>
    <string name="nav_tac">Term and Condition</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nav_drawer">Navigation</string>

    <string name="action_settings">Settings</string>
    <string name="about"><text>An application made by a group of student that aims to help people lead a healthy diet.
    Food API is provided by Fat Secret.</text></string>
    <string name="lastupdate">Last updated: Monday,January 2, 2017</string>
    <string name="paragraf1">Please read these Terms and Conditions carefully before using the ​HealthyDietPlus mobile​ application operated by Our Company.​
Your access to and use of the Service is conditioned on your acceptance of and compliance with these Terms. These Terms apply to all visitors, users and others who access or use the Service.</string>
    <string name="paragraf2">By accessing or using the Service you agree to be bound by these Terms. If you disagree with any part of the terms then you may not access the Service.</string>
    <string name="purchase">Purchases</string>
    <string name="purchasesisi">If you wish to purchase any product or service made available through the Service ("Purchase"), you may be asked to supply certain information relevant to your Purchase including, without limitation, your …</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="subscriptionsisi">Some parts of the Service are billed on a subscription basis ("Subscription(s)"). You will be billed in advance on a recurring …</string>
    <string name="content">Content</string>
    <string name="contentisi1">Our Service allows you to post, link, store, share and otherwise make available certain information, text, graphics, videos, or other material ("Content"). You are responsible for the …</string>
    <string name="contentisi2">Our Service may contain links to third­party web sites or services that are not owned or controlled by Our Company.</string>
    <string name="contentisi3">Our Company has no control over, and assumes no responsibility for, the content, privacy policies, or practices of any third party web sites or services. You further acknowledge and agree that Our Company shall not be responsible or liable, directly or indirectly, for any​ damage or loss caused or alleged to be caused by or in connection with use of or reliance on any such content, goods or services available on or through any such web sites or services.</string>
    <string name="changes">Changes</string>
    <string name="changesisi">We reserve the right, at our sole discretion, to modify or replace these Terms at any time. If a revision is material we will try to provide at least 30 days\' notice prior to any new terms​ taking effect. What constitutes a material change will be determined at our sole discretion.</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_usisi">f you have any questions about these Terms, please contact us.</string>
</resources>
