<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/update_pic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="50"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_above="@+id/menu_picture"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="20sp"
                android:id="@+id/title" />

        </LinearLayout>

        <!--ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="31.41"
            android:src="@drawable/nasigoreng"
            android:id="@+id/logo_image"/-->

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>

        <LinearLayout
            android:id="@+id/food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="60"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            android:layout_weight="0.77">

            <TextView
                android:id="@+id/food_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qty"
                android:textSize="16sp"
                android:layout_weight="0.93" />
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text=""
                android:inputType="numberDecimal"
                android:textSize="16sp"
                android:id="@+id/servingValue_editText"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"/>
            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/servingUnit_spinner"
                android:layout_weight="40">
            </Spinner>


        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="55"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            android:layout_weight="0.77">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories"
                android:textSize="16sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:id="@+id/caloriesValue_textView" />
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"/>
            <TextView
                android:id="@+id/carb_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carbo"
                android:textSize="16sp"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"/>
            <TextView
                android:id="@+id/carbValue_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8.21"
                android:text="@string/g_food"
                android:textSize="16sp" />
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="55"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            android:layout_weight="0.77">

            <TextView
                android:id="@+id/protein_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protein"
                android:textSize="16sp"
                android:layout_weight="0.93" />
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"/>


            <TextView
                android:id="@+id/proteinValue_textView"
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_height="wrap_content"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/g_food"
                android:textSize="16sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fat_update"
                android:textSize="16sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"/>

            <TextView
                android:id="@+id/fatValue_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="16sp" />
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/g_food"
                android:textSize="16sp"
                android:id="@+id/textView5" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"/>

        <LinearLayout
            android:id="@+id/height_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="55"
            android:orientation="horizontal"
            android:layout_centerInParent="true">



        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
        <Button
            android:id="@+id/addMenu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add menu"
            android:backgroundTint="@color/pocket_color_4"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center_horizontal"/>


    </LinearLayout>

</RelativeLayout>