<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
            >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="29">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/judul_term_textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:text="@string/nav_settings"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:textAlignment="center"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"/>

        <LinearLayout
            android:id="@+id/aboutUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="15"
            android:orientation="horizontal">
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="3"
                android:src="@drawable/ic_comment_black_24dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:text="@string/nav_about_us"
                android:textSize="20sp"
                android:gravity="center_vertical" />
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"/>
        <LinearLayout
            android:id="@+id/termCon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="15"
            android:orientation="horizontal">
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="3"
                android:src="@drawable/ic_feedback_black_24dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:text="@string/Term_and_condition_page"
                android:textSize="20sp"
                android:gravity="center_vertical" />
        </LinearLayout>
        <!--Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"/>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="15"
            android:orientation="horizontal">
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <!--ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="3"
                android:src="@drawable/ic_watch_black_24dp"/>-->

            <!--<TextView-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="8"-->
            <!--android:text="@string/miband"-->
            <!--android:textSize="23sp"-->
            <!--android:gravity="center" />-->
            <!--TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:text="@string/miband"
                android:textSize="20sp"
                android:gravity="center_vertical" />
            <Switch
                android:id="@+id/miband_switch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"/>-->
        </LinearLayout>
        <!--Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="15"
            android:orientation="horizontal">
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="3"
                android:src="@drawable/ic_notifications_black_24dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:text="@string/reminder"
                android:textSize="20sp"
                android:gravity="center_vertical" />
        </LinearLayout>-->
    </LinearLayout>
</FrameLayout>